--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ video {
   width: auto;
   height: auto;
   z-index: -100;
- background: url('assets/sample.png') no-repeat;
+ background: url('../assets/sample.png') no-repeat;
   background-size: cover;
   transition: 1s opacity;
 }
@@ -68,6 +68,6 @@ a:hover{
   div{width:70%;}
 }
 @media screen and (max-device-width: 800px) {
-  html { background: url(assets/sample.png) #000 no-repeat center center fixed; }
+  html { background: url(../assets/sample.png) #000 no-repeat center center fixed; }
   #bgvid { display: none; }
 }
